(#2) Resume: Fix overflow

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -134,4 +134,5 @@ $breakpoint-desktop: 1024px;
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
